
Nov-08-2006  Guenther Noack
	* Fixed enclosure-link bug

Nov-06-2006  Yen-Ju Chen
	* Compile on Cocoa.
	* Post notification if fatching failed.

Nov-05-2006  Guenther Noack
	* Removed some deprecated methods
	* Dropped NSCoding serialization methods (not used by anyone
	  at the moment and they were broken anyway since the intro-
	  duction of the RSSLink class). Please use the methods in
	  the Storage categories instead. 
	* Added Factory class

Nov-04-2006  Guenther Noack
	* Removed lock from RSSFeed class. (The lock is left from
	  a first try with multithreading and never really did what
	  it was supposed to do.)
	* Put RSSFeed and RSSArticle protocols in seperate files.
 
Nov-03-2006  Yen-Ju Chen
	* Compile on Cocoa.

Nov-03-2006  Guenther Noack
	* Protocols (interfaces) for RSSFeed and RSSArticle
	* Fixed RSSFeed storage, so that restored articles have the
	  correct parent feed.
	* Deprecated -status method in feed in favor of -isFetching,
	  which is much more suitable for a boolean return value. (There
	  was only RSSFeedIsFetching and RSSFeedIsIdle.)

Nov-02-2006  Guenther Noack
	* Added code for RSSFeed storage

Nov-01-2006  Guenther Noack
	* Fixed creation of articles without proper 'alternate' link.

Nov-01-2006  Yen-Ju Chen
	* Compile on Cocoa.
	* Fix missing url to article.

Oct-30-2006  Guenther Noack
	* Fixed URL loading bug for the storage
	* Added RSSLink class and subclasses (see RSSLinks.h). These classes
	  replace NSURL for the storage of links from articles.	

Oct-29-2006  Yen-Ju Chen
	* Tidy up a little.

Oct-25-2006  Yen-Ju Chen

	* Merge back from branch.

Oct-22-2006  Yen-Ju Chen

	* Support loading feed in background.

Oct-21-2006  Yen-Ju Chen

	* Initial branch.
	* Compile on Cocoa.

Oct-9-2006  Guenther Noack
	Added code to store articles as property lists

Sep-26-2006  Quentin Mathe <qmathe@club-internet.fr>
	* GNUmakefile: Modified to include 'etoile.make'.

Sep-25-2006  Guenther Noack
	Relicensed to LGPL
